adding dropdown and section for profile

--- a/index.html
+++ b/index.html
@@ -27,15 +27,24 @@
       <span></span>
       <span></span>
     </div>
-    <div class="menu-link">
+    <div class="menu-links">
       <li><a href="#about"  onclick="toggleMenu()">About</a></li>
       <li><a href="#experience"  onclick="toggleMenu()">Experience</a></li>
       <li><a href="#projects"  onclick="toggleMenu()">Projects</a></li>
       <li><a href="#contact"  onclick="toggleMenu()">Contact</a></li>
     </div>
   </div>
-
 </nav>
+<section id="profile">
+  <div class="section__pic">
+    <img src="./assets/newprofile.png" alt="Michael Chang Profile Pic ">
+  </div>
+  <div class="section__text">
+    <p class="section__test_p1">Hello, I'm</p>
+    <h1 class="title">Michael Chang</h1>
+    <p class="Section__text__p2">Softwear Engineer looking for opportunities</p>
+  </div>
+</section>
   <script src="script.js"></script>
 </body>
 </html>
