adding links to socials

--- a/index.html
+++ b/index.html
@@ -44,6 +44,22 @@
     <h1 class="title">Michael Chang</h1>
     <p class="Section__text__p2">Softwear Engineer looking for opportunities</p>
   </div>
+  <div class="btn-container">
+    <button class="btn btn-color-2" onclick="window.open('./assets/SEResume.pdf')">
+       Download Resume
+    </button>
+    <button class="btn btn-color-1" onclick="location.href='./#contact'">
+        Contact Info
+    </button>
+    <div id="socials-contacts">
+      <img src="./assets/linkedin.png" alt=" My LinkedIn profile" class="icon" 
+      onclick="location.href = 'https://www.linkedin.com/in/michaelharrisonchang/' ">
+    </div>
+    <div id="socials-contacts">
+      <img src="./assets/github.png" alt=" My LinkedIn profile" class="icon" 
+      onclick="location.href = 'https://github.com/mhchang1024' ">
+    </div>
+  </div>
 </section>
   <script src="script.js"></script>
 </body>
