--- a/index.html
+++ b/index.html
@@ -91,10 +91,28 @@
                 alt="experience icon"
                 class="icon"
               />
+              <h3> Experience</h3>
+              <p> 1 year <br> Software Development</p>
             </div>
+            <div class="details-container">
+              <img
+                src="./assets/education.png"
+                alt="experience icon"
+                class="icon"
+              />
+              <h3> Education</h3>
+              <p> B.Sc. Computer Science</p>
+            </div>
+          </div>
+          <div class="text-container">
+            <p>
+
+            </p>
           </div>
         </div>
       </div>
+      <img src="./assets/arrow.png" alt="Arrow Icon"
+      class="icon arrow" onclick="location.href = './#experience'">
     </section>
     <script src="script.js"></script>
   </body>
