addding styling to experience but need to fix

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <h1 class="title">Experience</h1>
       <div class="experience-details-container">
         <div class="about-containers">
-          <div class="details-containers">
+          <div class="details-container">
             <h2 class="experience-sub-title">Languages/Frameworks</h2>
             <div class="article-container">
               <html>
@@ -213,7 +213,7 @@
               </html>
             </div>
           </div>
-          <div class="details-containers">
+          <div class="details-container">
             <h2 class="experience-sub-title">Software</h2>
             <div class="article-container">
               <html>
