--- a/index.html
+++ b/index.html
@@ -272,16 +272,156 @@
       <p class="section__text__p1">Browse My Recent</p>
       <h1 class="title">Projects</h1>
       <div class="experience-details-container">
-        <div class="details-container color-container">
-          <img
-            src="./assets/Weather-app.jpg"
-            alt="Weather App"
-            class="project-img"
-          />
+        <div class="about-containers">
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/Weather-app-re.jpg"
+                alt="Weather App"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Weather App</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick=" location.href='https://github.com/mhchang1024/Weather-app'"
+              >
+                GitHub
+              </button>
+              <!--<button
+            class="btn btn-color-2 project-btn"
+            onclick=" location.href='https://github.com/mhchang1024/Weather-app'"
+          >
+            Live Demo
+          </button>-->
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/Student-center-re.jpg"
+                alt="Weather App"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Student Center</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick=" location.href='https://github.com/mhchang1024/Weather-app'"
+              >
+                GitHub
+              </button>
+              <!--<button
+            class="btn btn-color-2 project-btn"
+            onclick=" location.href='https://github.com/mhchang1024/Weather-app'"
+          >
+            Live Demo
+          </button>-->
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/multiplayer-game-re.jpg"
+                alt="Weather App"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Uno Multiplayer</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick=" location.href='https://github.com/mhchang1024/Weather-app'"
+              >
+                GitHub
+              </button>
+              <!--<button
+            class="btn btn-color-2 project-btn"
+            onclick=" location.href='https://github.com/mhchang1024/Weather-app'"
+          >
+            Live Demo
+          </button>-->
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/Wholesale-db-re.jpg"
+                alt="Weather App"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">
+              Wholesale Database
+            </h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick=" location.href='https://github.com/mhchang1024/Weather-app'"
+              >
+                GitHub
+              </button>
+              <!--<button
+            class="btn btn-color-2 project-btn"
+            onclick=" location.href='https://github.com/mhchang1024/Weather-app'"
+          >
+            Live Demo
+          </button>-->
+            </div>
+          </div>
         </div>
-        <h2 class="experience-sub-title project-title"> Weather App</h2>
+      </div>
+      <img
+        src="./assets/arrow.png"
+        alt="Arrow Icon"
+        class="icon arrow"
+        onclick="location.href = './#contact'"
+      />
+    </section>
+    <section id="contact">
+      <p class="section__text__p1">Get in Touch</p>
+      <h1 class="title">Contact Me</h1>
+      <div class="contact-info-upper-container">
+        <div class="contact-info-container">
+          <img
+            src="./assets/email.png"
+            alt="Email icon"
+            class="icon contact-icon email-icon"
+          />
+          <p>
+            <a href="mailto:michaelhchang@outlook.com">
+              michaelhchang@outlook.com</a
+            >
+          </p>
+        </div>
+        <div class="contact-info-container">
+          <img
+            src="./assets/linkedin.png"
+            alt="linkedin icon"
+            class="icon contact-icon"
+          />
+          <p>
+            <a href="https://www.linkedin.com/in/michaelharrisonchang/">
+              LinkedIn</a
+            >
+          </p>
+        </div>
+        
       </div>
     </section>
+    <footer>
+      <nav>
+        <div class="nav-links">
+          <li><a href="#about">About</a></li>
+          <li><a href="#experience">Experience</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </div>
+      </nav>
+      <p>CopyRight &#169; 2024 Michael Chang. All Rights Reserved</p>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
