--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </div>
     </nav>
     <section id="profile">
-      <div class="section__pic">
+      <div class="section__pic-container">
         <img src="./assets/newprofile.png" alt="Michael Chang Profile Pic " />
       </div>
       <div class="section__text">
@@ -83,7 +83,7 @@
       <p class="section__text__p1">Get To Know Me</p>
       <h1 class="title">About Me</h1>
       <div class="section-container">
-        <div class="section__pic">
+        <div class="section__pic-container">
           <img
             src="./assets/about-filler.png"
             alt="Profile picture"
@@ -116,7 +116,7 @@
           </div>
           <div class="text-container">
             <p>
-              I earned my Bachelor's degree in Computer Science in 2023. In
+              I earned my Bachelor's degree in Computer Science. In
               addition to my academic pursuits, I find joy in rock climbing,
               building PCs, and embarking on personal projects. With a strong
               work ethic and dedication to quality, I thrive on creative
