adding new infor for lookin for

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <p class="section__test_p1">Hello, I'm</p>
         <h1 class="title">Michael Chang</h1>
         <p class="section__text__p2">
-          Software Engineer looking for opportunities
+          Software Engineer looking for interneships and opportunites 
         </p>
         <div class="btn-container">
           <button
